--- a/styles/pages/checkout/checkout.css
+++ b/styles/pages/checkout/checkout.css
@@ -209,3 +209,20 @@
   margin-top: 11px;
   margin-bottom: 15px;
 }
+.update-quantity-input{
+  width : 30px;
+  border-radius : 5px;
+  border : 1px solid black;
+}
+.update-quantity-input ,.confirm-update-link{
+  display:none;
+}
+.is-editing-quantity .update-quantity-input{
+  display: initial;
+}
+.is-editing-quantity .confirm-update-link{
+  display: initial;
+}
+ .is-editing-quantity .update-quantity-link{
+  display: none;
+}
